# botango

./: .gitignore  pyproject.toml  setup.cfg
.github/workflows/: publish.yaml
src/botango/: __init__.py  cli.py  cli_commands.py  core_bot.py  creator_project.py  render_templates.py
src/botango/bot/: core.py
src/botango/core/: project_config.py  toml_creator.py
src/botango/core/structures/: bot_structure.py  component.py  dependency.py  env_configuration.py  structure.py  template.py
src/botango/core/structures/structures/: base_structure.py  bot_structure.py
src/botango/databases/: __init__.py  absrtact_db.py  aiosqlite_db.py  postgres_db.py  schemas.py
src/botango/schemas/: __init__.py  database.py  mode.py  project.py  project_schema.py  template_class.py  webhook.py
src/botango/templates/: .gitignore.j2  _base_db.py  _connection.py  _create_database.py  _env.py  _gitignore.py  _init_database.py  _init_models.py  _main.py  _model_user.py  _settings.py  empty_init.j2  env.j2  enviroment_jinja.py  generator.py  gitignore.j2  init_database.j2  init_models.j2  main.j2  project.py  settings.j2
src/botango/templates/bot/: __init__.py.j2
src/botango/templates/bot/handlers/: __init__.py.j2
src/botango/templates/database/: connection.j2
src/botango/templates/database/models/: user.j2
src/botango/templates/settings/: __init__.py.j2  settings.py.j2
src/botango/utils/: cli_funcs.py  creator_database.py  creator_project.py  package_loader.py  render_templates.py
tests/: test_config.py
