[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "botango"          # уникальное имя в PyPI
version = "0.1.0"               # или убери и используй setuptools_scm
description = "Простая библиотека для создания телеграмм ботов на основе библиотеки aiogram."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name="@PyExecutor", email="belyankiss@gmail.com" }
]
keywords = ["telegram", "bot", "aiogram", "framework", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
  "aiogram>=3.12.0",
  "aiosqlite==0.21.0",
  "click>=8.3.0",
  "jinja2>=3.1.5",
  "python-dotenv>=1.1.1",
  "sqlalchemy==2.0.44",
  "toml>=0.10.2",
  "uv>=0.9.4",
]

[project.optional-dependencies]
dev = [
    "pytest >= 7.0.0",
    "pytest-cov",
    "black",
    "isort",
    "flake8",
    "mypy",
    "pre-commit",
]
test = [
    "pytest >= 7.0.0",
    "pytest-cov",
    "pytest-mock",
]

[project.urls]
"Homepage" = "https://github.com/belyankiss/botango"
"Repository" = "https://github.com/belyankiss/botango"

[project.scripts]
botango = "botango.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.hatch.build]
include = [
    "src/botango/templates/**/*",
]

[tool.hatch.build.force-include]
"src/botango/templates/" = "botango/templates/"

[tool.black]
target-version = ['py38']
line-length = 100
skip-string-normalization = true

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 100

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "--cov=botango --cov-report=html --cov-report=term-missing"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
